# govwin-hubspot-integration

./: .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .release-please-config.json  AI_USE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY-INSIGHTS.yml  SECURITY.md  SUPPORT.md  docker-compose.yml  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  seed-issues.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release-please.yml  sbom.yml  scorecard.yml  slsa.yml
.well-known/security/: README.md  pandora-cloud-public.asc
docs/: ace-integration.md  architecture.md  deployment-guide.md  field-mapping-parity.md  field-mapping.md  operations.md  phase4-runbook.md  testing-in-your-account.md  testing.md
docs/diagrams/: architecture.drawio  pipeline-overview.drawio
docs/reference/: README.md
hubspot-app/: hsproject.json
scripts/: check_marked_and_hubspot.py  check_opp.py  discover_status_vocab.py  dry_run.py  fault_inject.py  find_test_candidates.py  generate_security_pgp.sh  localstack-init.sh  mark_unmark_opp.py  open_seed_issues.sh  sandbox_smoke.py  setup_commit_signing.sh  validate.py  verify_fips.py
src/: aws_clients.py  config.py  models.py
src/ace/: __init__.py  client.py  mapper.py  rate_limiter.py  validators.py
src/govwin/: auth.py  client.py  rate_limiter.py
src/hubspot/: client.py  properties.py  rate_limiter.py
src/lambdas/: _webhook_routing.py  authenticate.py  discover_changes.py  fetch_opp_details.py  govwin_orchestrator.py  govwin_worker.py  handle_ace_event.py  handle_error.py  hubspot_webhook_receiver.py  setup_ace_webhooks.py  setup_hubspot.py  setup_hubspot_webhooks.py  submit_to_ace.py  sync_to_hubspot.py  update_in_ace.py  update_sync_state.py
src/sync/: dedup.py  mapper.py  orchestrator.py  state.py
terraform/: backend.hcl.example  backend.tf.example  main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
terraform/bootstrap/: README.md  deployer_role.tf  main.tf  outputs.tf  state_bucket.tf  terraform.tfvars.example  (+1 more)
tests/: conftest.py
(+67 files in other folders)
