[project]
name = "govwin-hubspot-integration"
version = "0.1.0"
description = "Sync government contracting opportunities from Deltek GovWin IQ into HubSpot CRM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
    "boto3>=1.34,<2.0",
    "tenacity>=8.0,<9.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "moto[dynamodb,secretsmanager,stepfunctions]>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "boto3-stubs[dynamodb,secretsmanager]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
